--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 .DS_Store
+.idea/
+todolist-flex/src/valueObjects/_*.as
+todolist/target/
+todolist/web-app/*.swf
+todolist/web-app/history/
+todolist/web-app/Main.html
+todolist/.idea/
+todolist/.project
+todolist/.classpath
+todolist/*.iml
+todolist/web-app/swfobject.js
+todolist-flex/.project
+todolist-flex/.actionScriptProperties
+todolist-flex/.flexProperties
+todolist-flex/.model/
+todolist-flex/.settings/
+todolist-flex/html-template/
+todolist/.settings/
